[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/measure_point.gd" type="Script" id=1]
[ext_resource path="res://scenes/cubes/cube_ampere.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cubes/cube_volt.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.02, 0.02, 0.02 )

[node name="MeasurePoint" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="CubeAmpere" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CubeVolt" parent="." instance=ExtResource( 3 )]
